# osnova

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  BUILD_SUMMARY.md  CLAUDE.md  README.md  SPEC.md  TESTING.md  build_agents_continue.sh  build_canary_system.sh  build_final_agents.sh  continue_build.sh  pyproject.toml  test_integration_full.py  test_scenario.sh
.agents/sentinel/: build_plan.json
data/corpus/: __init__.py  abjad.py  avesta_corpus.json  bhagavad_gita_corpus.json  enoch_corpus.json  gematria.py  gilgamesh_corpus.json  isopsephy.py  proverbs_pl.py  quran_corpus.json  quran_pl_corpus.json  torah.py  (+5 more)
docs/: canary_analysis.md  canary_implementation.md  cascade_analysis.md  jezyk-boski-integration.md  noise-riddle-spec.md  steganographic_channels.md
osnova/: __init__.py  app.py  config.py  pardes.py  schemas.py
php/: config.php  index.php  loader.php
scripts/: build_gematria_db.py  deploy.sh  fetch_avesta.py  fetch_bible_nt.py  fetch_bible_ot_en.py  fetch_bible_pl.py  fetch_enoch.py  fetch_gilgamesh.py  fetch_gita.py  fetch_quran.py  fetch_quran_pl.py  fetch_sibylline.py  fetch_tanakh.py  fetch_torah.py  fetch_voluspa.py  fetch_war_scroll.py  launch_cluster.sh
static/: noise-generator.html  style.css
templates/: base.html  comments_partial.html  compose.html  discover.html  eject.html  feed.html  identity.html  rings.html  rings_list_partial.html
tests/: canary_crypto_test.php  test_api.py  test_api_discovery.py  test_crypto.py  test_eject.py  test_gossip.py  test_integration.py  test_riddle.py  test_rings.py  test_storage.py  test_triangulation.py
(+76 files in other folders)
